take range into account when looking for redeclarations

probably we should refactor the handling of foreach
variables, since right now we have to visit the
TypeBuilder::visitStatement before declaring the variables.
this has side-effects since it also means we visit the
foreach-body statements before declaring the variables...

BUG: 296709